# endicheck

./: .gitignore  Makefile.am  Makefile.vex.am  README.md  configure.ac  vg-in-place
coregrind/: Makefile.am  m_otrack.c  pub_core_otrack.h
docs/: Makefile.am
endicheck/: Makefile.am  ec_errors.c  ec_errors.h  ec_include.h  ec_main.c  ec_main.h  ec_shadow.c  ec_shadow.h  ec_util.h  endicheck.h
endicheck/ec-overlay/: ec_overlay_common.h  netdb.h  unistd.h
endicheck/ec-overlay/arpa/: inet.h
endicheck/ec-overlay/sys/: socket.h
endicheck/tests/: Makefile.am  bitop.c  bitop.vgtest  bitpack.c  bitpack.stderr.exp  bitpack.vgtest  calloc_is_any.c  calloc_is_any.stderr.exp  calloc_is_any.vgtest  casted_byte.c  casted_byte.vgtest  filter_stderr  load_store.c  load_store.stderr.exp  load_store.vgtest  memcmpy_correct.c  memcmpy_correct.vgtest  memcpy_correct.c  memcpy_correct.vgtest  mk-new-test  openttd.c  openttd.stderr.exp  openttd.vgtest  origins.c  origins.stderr.exp  origins.vgtest  protection.c  protection.stderr.exp  protection.vgtest  shift.c  shift.stderr.exp  shift.vgtest  simple_correct.c  simple_correct.vgtest  simple_incorrect.c  simple_incorrect.stderr.exp  simple_incorrect.vgtest  util.h
include/: Makefile.am  pub_tool_otrack.h
memcheck/: Makefile.am  mc_include.h  mc_main.c  mc_translate.c
